# claude-orch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tasks.md
.githooks/: pre-push
.github/workflows/: ai-review.yml
docs/: ai-review.md  architecture.md  development.md  handoff.md
docs/references/: conductor-agent-orchestration-summary.ko.md
scripts/: ai-review.ps1  ai_review.py  check_handoff.py  install-ai-review-hook.ps1  update-handoff.ps1  update_handoff.py
src/orchestrator/: __init__.py  cli.py  db.py  decider.py  engine.py  expr.py  llm.py  tools.py  webui.py  workers.py
tests/: test_bundled_workflows.py  test_engine.py
tests/e2e/: webui_e2e_test.py
workflows/: hello_world.json  multi_agent_fork_join.json  switch_example.json  think_act_observe.json
