[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-lab"
version = "0.1.0"
description = "A toy durable workflow/agent orchestration engine for practicing AI orchestration concepts, inspired by conductor-oss/conductor."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
